crates/etas_tests/fixtures/compiler/projects/negative/private_import/src/app/main.es
module app.main;

import app.util.{helper};

flow main(args: Array<string>) -> i32 {
    return 0;
}
